data base and minor updates

--- a/ass1.html
+++ b/ass1.html
@@ -8,26 +8,27 @@
 
   
   <h3>1. Basic Image</h3>
-  <img src="./download.jpg" alt="Sample Image">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Sample Image">
+  
 
   <h3>2. Resized Image (200x150)</h3>
-  <img src="./download.jpg" alt="Resized Sample" width="200" height="150">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Resized Sample" width="200" height="150">
 
   <h3>3. Lazy Loading Image</h3>
-  <img src="./download.jpg" alt="Lazy Load Example" loading="lazy">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Lazy Load Example" loading="lazy">
 
   <h3>4. Image with Title Tooltip</h3>
-  <img src="./download.jpg" alt="Tooltip Image" title="This is a tooltip">
+  <img src="https://drive.google.com/file/d/1s5ZXBk4nj5qrjH3GUnUmkeeVzViTMGZm/view?usp=drive_link" alt="Tooltip Image" title="This is a tooltip">
 
   <h3>5. Image Map</h3>
-  <img src="./download.jpg" usemap="#imagemap" alt="Clickable Map Example">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" usemap="#imagemap" alt="Clickable Map Example">
   <map name="imagemap">
     <area shape="rect" coords="50,50,150,150" href="https://www.google.com" alt="Rectangle Area">
     <area shape="circle" coords="300,150,50" href="https://www.wikipedia.org" alt="Circle Area">
   </map>
 
   <h3>6. Responsive Image</h3>
-  <img src="./download.jpg"
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg"
        srcset="download.jpg 480w, download.jpg 800w, download.jpg 1200w"
    
        alt="Responsive Example">
@@ -35,25 +36,25 @@
   <h3>7. Image inside Paragraph</h3>
   <p>
    
-    This paragraph has an image inside it. The text will flow around the image  <img src="./download.jpg" alt="Float Example" style="float:left; margin: top 1px"> making it look neat and professional. This is often used in blogs, news sites, and online articles.
+    This paragraph has an image inside it. The text will flow around the image  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Float Example" style="float:left; margin: top 1px"> making it look neat and professional. This is often used in blogs, news sites, and online articles.
   </p>
   <br>
 <div>
 
   <h3>8. Image with Only Width</h3>
-  <img src="./download.jpg" alt="Width Only" width="250">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Width Only" width="250">
 </div>
 
   <h3>9. Image with Only Height</h3>
-  <img src="./download.jpg" alt="Height Only" height="200">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Height Only" height="200">
 
   <h3>10. Multiple Images Side by Side</h3>
-  <img src="./download.jpg" alt="Image 1" style="display:inline-block; margin:5px;">
-  <img src="./download.jpg" alt="Image 2" style="display:inline-block; margin:5px;">
-  <img src="./download.jpg" alt="Image 3" style="display:inline-block; margin:5px;">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Image 1" style="display:inline-block; margin:5px;">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Image 2" style="display:inline-block; margin:5px;">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Image 3" style="display:inline-block; margin:5px;">
 
   <h3>11. Circular Image</h3>
-  <img src="./download.jpg" alt="Circular" style="border-radius:50%;">
+  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Circular" style="border-radius:50%;">
 
 </body>
 </html>
