some image updates

--- a/ass1.html
+++ b/ass1.html
@@ -8,7 +8,7 @@
 
   
   <h3>1. Basic Image</h3>
-  <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Sample Image">
+  <img src="https://camo.githubusercontent.com/a0584e59a36f08f65bcaeb1600574905a76cf0dc752167901931b4ee3881084a/68747470733a2f2f69302e77702e636f6d2f7069636a756d626f2e636f6d2f77702d636f6e74656e742f75706c6f6164732f62656175746966756c2d66616c6c2d6e61747572652d7363656e6572792d667265652d696d6167652e6a7065673f773d363030267175616c6974793d3830" alt="Sample Image">
   
 
   <h3>2. Resized Image (200x150)</h3>
@@ -18,7 +18,7 @@
   <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" alt="Lazy Load Example" loading="lazy">
 
   <h3>4. Image with Title Tooltip</h3>
-  <img src="https://drive.google.com/file/d/1s5ZXBk4nj5qrjH3GUnUmkeeVzViTMGZm/view?usp=drive_link" alt="Tooltip Image" title="This is a tooltip">
+  <img src="https://camo.githubusercontent.com/a0584e59a36f08f65bcaeb1600574905a76cf0dc752167901931b4ee3881084a/68747470733a2f2f69302e77702e636f6d2f7069636a756d626f2e636f6d2f77702d636f6e74656e742f75706c6f6164732f62656175746966756c2d66616c6c2d6e61747572652d7363656e6572792d667265652d696d6167652e6a7065673f773d363030267175616c6974793d3830" alt="Tooltip Image" title="This is a tooltip">
 
   <h3>5. Image Map</h3>
   <img src="https://res.cloudinary.com/dilvq8zr3/image/upload/v1757997289/download_nut8tl.jpg" usemap="#imagemap" alt="Clickable Map Example">
